# ChangeLog for dev-lang/ruby
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/ruby/ChangeLog,v 1.618 2013/11/30 14:07:35 jer Exp $

  30 Nov 2013; Jeroen Roovers <jer@gentoo.org> ruby-1.9.3_p484.ebuild:
  Stable for HPPA (bug #492282).

*ruby-2.0.0_p353 (22 Nov 2013)
*ruby-1.9.3_p484 (22 Nov 2013)

  22 Nov 2013; Hans de Graaff <graaff@gentoo.org> +ruby-1.9.3_p484.ebuild,
  +ruby-2.0.0_p353.ebuild:
  Version bumps for security bug 492282.

*ruby-2.0.0_p247-r2 (14 Oct 2013)

  14 Oct 2013; Hans de Graaff <graaff@gentoo.org> +ruby-2.0.0_p247-r2.ebuild:
  Remove USE=yaml since the libyaml dependency is no longer optional in Ruby
  2.x. Fixes bug 483466.

  14 Oct 2013; Hans de Graaff <graaff@gentoo.org> -ruby-1.8.7_p371.ebuild,
  -ruby-1.9.3_p429.ebuild:
  Cleanup.

  05 Sep 2013; Jeroen Roovers <jer@gentoo.org> ruby-2.0.0_p247-r1.ebuild:
  Stable for HPPA (bug #483254).

  01 Sep 2013; Agostino Sarubbo <ago@gentoo.org> ruby-2.0.0_p247-r1.ebuild:
  Stable for x86, wrt bug #483254

  01 Sep 2013; Agostino Sarubbo <ago@gentoo.org> ruby-2.0.0_p247-r1.ebuild:
  Stable for amd64, wrt bug #483254

  06 Aug 2013; Agostino Sarubbo <ago@gentoo.org> ruby-1.8.7_p374.ebuild,
  ruby-1.9.3_p448.ebuild:
  Stable for s390, wrt bug #475074

*ruby-2.0.0_p247-r1 (29 Jul 2013)
*ruby-1.9.3_p448-r1 (29 Jul 2013)
*ruby-1.8.7_p374-r1 (29 Jul 2013)

  29 Jul 2013; Hans de Graaff <graaff@gentoo.org> +ruby-1.8.7_p374-r1.ebuild,
  +ruby-1.9.3_p448-r1.ebuild, +ruby-2.0.0_p247-r1.ebuild:
  Revision bump to counter breakage introduced in portage 2.1.13 for bug
  465000. Thanks to thansen for reporting.

  22 Jul 2013; Agostino Sarubbo <ago@gentoo.org> ruby-1.8.7_p374.ebuild,
  ruby-1.9.3_p448.ebuild:
  Stable for sparc, wrt bug #475074

  21 Jul 2013; Agostino Sarubbo <ago@gentoo.org> ruby-1.8.7_p374.ebuild,
  ruby-1.9.3_p448.ebuild:
  Stable for sh, wrt bug #475074
