@@ -4,13 +4,13 @@ Hash: SHA256
 AUX oauth-0.4.1-optional-tests.patch 3247 SHA256 efa33fb67f1835517c54c8021ccfa4c1e9019da8244c3e0e25ad60c8b214c545 SHA512 81a0ffd49f762348540dce46a506d9f7f7e532573b80cc8fd0bd864c3f04f16b6392649bf2f5cd8be3a06f18789dfdd776f16a0112c6490b13db844d77bf86b2 WHIRLPOOL 7d417840012f66b481a10c72fca38ccfd2ed75c0ab1f5c23370ac84e0905d8f0578f10ec9b91985acd2815dfb8bb5c09a23870a7f364192da550959e0db7f67e
 AUX oauth-0.4.3-optional-tests.patch 3502 SHA256 7b2160eb55d9f8e41757b7390a5b16c82649c28fd717775a7545419480361983 SHA512 d10018d666cc145be2afe0f43ab5e771b1d48d44cbed18a8ec4de616ec1613af24b063e1d60c04dfa9903268e8a3f433fa011a826f723d1d40edf8a042d465cb WHIRLPOOL 0205a58ab94db05cc5155e0a9a5754978bb1777444f91a8a1a7a18bec3759c10f919f3835320f7edc8cb397d829a21d5adfd4aea61cbea50d79c19be968b73d7
 DIST oauth-0.4.7.gem 50688 SHA256 bca47d77c946af466872269e37e470837858b1305d5143e5a56c50356e02b2cc SHA512 7d8df61574aaf53ffcb206c6a210546c36b67b2c545d6b31afef2961ee135050923f427dc4720379b7689eef9d921015c26fedd8b11bbd13761dd498155fc550 WHIRLPOOL 5a9dd0eeb2137db2b9810482dca116bf38c06ed75dff2df434118c147ed907d4fdad55dfd2e9c0751b42a110cd240c2ff70bfca75bcffc7f08dd454f65ca7591
-EBUILD oauth-0.4.7.ebuild 1278 SHA256 2a2f6519304ac58cb5e8c02cfe6bd3a172be09f8d5987180faec79502de66899 SHA512 05bd5708d92a9b8e800eceeeada58436ff5b063b0dc6a92393477184d2cd97f60a3722926e613f6874d152fd52e0cea35f1748e3ec45a74c1a41932935d386a0 WHIRLPOOL 93974d2d538ebe3f45a8fe2dbd7d9cf7ee47245dbaee38f4f4b5d8b9480d6b9904022842bdcc3a2758d465fcd9d857d2c83be60bd6a4937093051b46b8d785ed
-MISC ChangeLog 3014 SHA256 a1c3ee1d19a10cf1e907167528a284594d260412eefba66178372cc36eca2ac8 SHA512 5039a242bc4f8a1912212649529bc51039fc71eeb2aa60f77c2e33a788a0a7254b649c9d9a1a1429e2536087b791c9257727e9f8888b720c1482a140a8914092 WHIRLPOOL f1a98dec69b55ca27589c3a6bb942e620fae40e8bd1659f93a2e39efb570eba26486b9c832a92cb958a2cf980667b0ebc4cc351eecbe4e1bef78319e752ac180
+EBUILD oauth-0.4.7.ebuild 1401 SHA256 4e4f955421749de1afaf404f02a98707e4f7fa6b1cefcfe13ae3b4fc17e86e69 SHA512 9eb9ddd7ebd53b6f08068abf4662595bfc670371585b93149d2e981fabf8d62ead207ea817692ff008faba1c5c082449d31884bf1c20b4d9ba787d1169252e47 WHIRLPOOL 8133af0ce872e49dbfae80540f98e8d8f2bdbf499633133f471a98ee182ae4882b321367120c1d760205743c71501ceb30ac6c7ae92d102b7ae1dd03f6dd826c
+MISC ChangeLog 3184 SHA256 b287779b6ca09d05d5915b44b5a835d8136f05eaf61a04212ac5cf8e8e3471de SHA512 44d06eed0ed8f2bf91b813698666c1bb14c46bc957e9239500e7116b5536ba023ceda4370b7628e337dd920317eeb92772a755dce2d1d4da2017ecaa6a6389ac WHIRLPOOL 2f4b8f1ff4af2db347475910a9d79dd7b682fb3c31a647847f071cc6c1fe9220e5e80352f5d2568b86a33de36457294c843ae7c000889c72b36c76497211dc92
 MISC metadata.xml 157 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c SHA512 0cec73b966de88015ea4c7212723d848d367608aa93658bb945f298a8000c4ba8aba73c9eb8481859fb5bbed45e80dae32c628caf81e027a4ad8eafa7e632851 WHIRLPOOL 4da25c81e21173ad8b7b5f35b056264869d9a16741062aa4422c5ea1aa9e73da8eb700b0d54de84c169d702fbb3f41ed157c9dc7c9daac110849ae84715c051b
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.20 (GNU/Linux)
+Version: GnuPG v2.0.22 (GNU/Linux)
 
-iF4EAREIAAYFAlIHQGoACgkQiIP6VqMIqNdkYAD/SUQxUXrGNdJPxRNmnISzaAmI
-Cu6ErE3/J/CgQTEEkggA/0jDXBh5MiyELM7Sb52pSiV3GGraPVXJHFynrMXrhXZk
-=FVSa
+iF4EAREIAAYFAlKaCz4ACgkQiIP6VqMIqNdm8QD/ZBVBXEIRvJdGFuujNNqKlUFW
+WCPr3815DYQ0FA0dq3oA/1A9r8XvXF3cchuaetQkZWrzvLjaA3+IxiaVIHRErTy4
+=jl4F
 -----END PGP SIGNATURE-----
