@@ -1,9 +1,9 @@
-# Copyright 1999-2012 Gentoo Foundation
+# Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/oauth/oauth-0.4.7.ebuild,v 1.1 2012/10/05 10:33:57 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/oauth/oauth-0.4.7.ebuild,v 1.2 2013/11/30 15:58:53 graaff Exp $
 
 EAPI=4
-USE_RUBY="ruby18 ree18 ruby19"
+USE_RUBY="ruby18 ree18 ruby19 jruby"
 
 RUBY_FAKEGEM_TASK_DOC=""
 
@@ -20,13 +20,19 @@ KEYWORDS="~amd64 ~x86 ~x86-macos"
 IUSE=""
 
 ruby_add_bdepend "test? (
-		dev-ruby/mocha
+		dev-ruby/test-unit:2
+		dev-ruby/mocha:0.12
 		dev-ruby/webmock )"
-USE_RUBY="ruby18 ree18" ruby_add_bdepend "test? ( >=dev-ruby/actionpack-2.3.8:2.3 )"
 
 all_ruby_prepare() {
+	# Require a compatible version of mocha
+	sed -i -e '1igem "mocha", "~> 0.12.0"' test/test_helper.rb || die
+
 	# Ensure a consistent test order to avoid loading issues with e.g. rack
 	sed -i -e "s/.rb']/.rb'].sort/" Rakefile || die
+
+	# Remove tests that require Rails 2.3 since that is ruby18-only.
+	rm test/test_action_controller_request_proxy.rb || die
 }
 
 each_ruby_prepare() {
@@ -41,7 +47,6 @@ each_ruby_prepare() {
 			;;
 		*ruby19)
 			# Remove tests depending on rails.
-			rm test/test_action_controller_request_proxy.rb || die
 			;;
 		*)
 			;;
