@@ -4,11 +4,11 @@ DESCRIPTION=An object-oriented scripting language
 EAPI=5
 HOMEPAGE=http://www.ruby-lang.org/
 IUSE=berkdb debug doc examples gdbm ipv6 +rdoc rubytests socks5 ssl tk xemacs ncurses +readline
-KEYWORDS=~alpha ~amd64 ~arm ~hppa ~ia64 ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~amd64-fbsd ~x86-fbsd
+KEYWORDS=~alpha ~amd64 ~arm hppa ~ia64 ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~amd64-fbsd ~x86-fbsd
 LICENSE=|| ( Ruby-BSD BSD-2 )
 PDEPEND=>=dev-ruby/rubygems-2.0.2[ruby_targets_ruby20] >=dev-ruby/json-1.7.7[ruby_targets_ruby20] >=dev-ruby/rake-0.9.6[ruby_targets_ruby20] rdoc? ( >=dev-ruby/rdoc-4.0.0[ruby_targets_ruby20] ) xemacs? ( app-xemacs/ruby-modes )
 RDEPEND=berkdb? ( sys-libs/db ) gdbm? ( sys-libs/gdbm ) ssl? ( dev-libs/openssl ) socks5? ( >=net-proxy/dante-1.1.13 ) tk? ( dev-lang/tk[threads] ) ncurses? ( sys-libs/ncurses ) readline? ( sys-libs/readline ) dev-libs/libyaml virtual/libffi sys-libs/zlib >=app-admin/eselect-ruby-20100402 !<dev-ruby/rdoc-3.9.4 !<dev-ruby/rubygems-1.8.10-r1
 SLOT=2.0
 SRC_URI=mirror://ruby/2.0/ruby-2.0.0-p353.tar.bz2 http://dev.gentoo.org/~flameeyes/ruby-team/ruby-patches-2.0.0_p353.tar.bz2
 _eclasses_=autotools	d491cbee372fe390ce066f901abdaaaf	eutils	4878e7f88afc0ba0866ac112190b0fd4	flag-o-matic	65cef1287b9d62b1a0f180765d1e0c69	libtool	5932e418cf62147cad2d902718aacc56	multilib	892e597faee02a5b94eb02ab512e7622	multiprocessing	67154e3c80516dc77f9f56956f5beebe	toolchain-funcs	51e6c948e72c43bcc8edc7544411c953	user	d0a4d0735a6c0183d707ca919bd72f28	versionator	a8a3963967d6140be9a14b08bb8f047f
-_md5_=90ced8c2b27a0f3134307b80a14c2069
+_md5_=d3391d005dc000aa17e87e556c5b05c0
