@@ -1,14 +1,14 @@
 DEFINED_PHASES=compile configure install prepare setup test unpack
-DEPEND=ruby_targets_ruby18? ( test? ( dev-ruby/mocha[ruby_targets_ruby18] dev-ruby/webmock[ruby_targets_ruby18] ) ) ruby_targets_ree18? ( test? ( dev-ruby/mocha[ruby_targets_ree18] dev-ruby/webmock[ruby_targets_ree18] ) ) ruby_targets_ruby19? ( test? ( dev-ruby/mocha[ruby_targets_ruby19] dev-ruby/webmock[ruby_targets_ruby19] ) ) ruby_targets_ruby18? ( test? ( >=dev-ruby/actionpack-2.3.8:2.3[ruby_targets_ruby18] ) ) ruby_targets_ree18? ( test? ( >=dev-ruby/actionpack-2.3.8:2.3[ruby_targets_ree18] ) ) ruby_targets_ruby18? ( dev-lang/ruby:1.8 ) ruby_targets_ree18? ( dev-lang/ruby-enterprise:1.8 ) ruby_targets_ruby19? ( dev-lang/ruby:1.9 ) ruby_targets_ruby18? ( test? ( dev-ruby/rake[ruby_targets_ruby18] ) ) ruby_targets_ree18? ( test? ( dev-ruby/rake[ruby_targets_ree18] ) ) ruby_targets_ruby19? ( test? ( dev-ruby/rake[ruby_targets_ruby19] ) ) ruby_targets_ruby18? ( virtual/rubygems[ruby_targets_ruby18] ) ruby_targets_ree18? ( virtual/rubygems[ruby_targets_ree18] ) ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) test? ( ruby_targets_ruby18? ( virtual/rubygems[ruby_targets_ruby18] ) ruby_targets_ree18? ( virtual/rubygems[ruby_targets_ree18] ) ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) )
+DEPEND=ruby_targets_ruby18? ( test? ( dev-ruby/test-unit:2[ruby_targets_ruby18] dev-ruby/mocha:0.12[ruby_targets_ruby18] dev-ruby/webmock[ruby_targets_ruby18] ) ) ruby_targets_ree18? ( test? ( dev-ruby/test-unit:2[ruby_targets_ree18] dev-ruby/mocha:0.12[ruby_targets_ree18] dev-ruby/webmock[ruby_targets_ree18] ) ) ruby_targets_ruby19? ( test? ( dev-ruby/test-unit:2[ruby_targets_ruby19] dev-ruby/mocha:0.12[ruby_targets_ruby19] dev-ruby/webmock[ruby_targets_ruby19] ) ) ruby_targets_jruby? ( test? ( dev-ruby/test-unit:2[ruby_targets_jruby] dev-ruby/mocha:0.12[ruby_targets_jruby] dev-ruby/webmock[ruby_targets_jruby] ) ) ruby_targets_ruby18? ( dev-lang/ruby:1.8 ) ruby_targets_ree18? ( dev-lang/ruby-enterprise:1.8 ) ruby_targets_ruby19? ( dev-lang/ruby:1.9 ) ruby_targets_jruby? ( dev-java/jruby ) ruby_targets_ruby18? ( test? ( dev-ruby/rake[ruby_targets_ruby18] ) ) ruby_targets_ree18? ( test? ( dev-ruby/rake[ruby_targets_ree18] ) ) ruby_targets_ruby19? ( test? ( dev-ruby/rake[ruby_targets_ruby19] ) ) ruby_targets_jruby? ( test? ( dev-ruby/rake[ruby_targets_jruby] ) ) ruby_targets_ruby18? ( virtual/rubygems[ruby_targets_ruby18] ) ruby_targets_ree18? ( virtual/rubygems[ruby_targets_ree18] ) ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) ruby_targets_jruby? ( virtual/rubygems[ruby_targets_jruby] ) test? ( ruby_targets_ruby18? ( virtual/rubygems[ruby_targets_ruby18] ) ruby_targets_ree18? ( virtual/rubygems[ruby_targets_ree18] ) ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) ruby_targets_jruby? ( virtual/rubygems[ruby_targets_jruby] ) )
 DESCRIPTION=A RubyGem for implementing both OAuth clients and servers.
 EAPI=4
 HOMEPAGE=http://oauth.rubyforge.org/
-IUSE=elibc_FreeBSD ruby_targets_ruby18 ruby_targets_ree18 ruby_targets_ruby19 test test
+IUSE=elibc_FreeBSD ruby_targets_ruby18 ruby_targets_ree18 ruby_targets_ruby19 ruby_targets_jruby test test
 KEYWORDS=~amd64 ~x86 ~x86-macos
 LICENSE=MIT
-RDEPEND=ruby_targets_ruby18? ( dev-lang/ruby:1.8 ) ruby_targets_ree18? ( dev-lang/ruby-enterprise:1.8 ) ruby_targets_ruby19? ( dev-lang/ruby:1.9 ) ruby_targets_ruby18? ( virtual/rubygems[ruby_targets_ruby18] ) ruby_targets_ree18? ( virtual/rubygems[ruby_targets_ree18] ) ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] )
-REQUIRED_USE=|| ( ruby_targets_ruby18 ruby_targets_ree18 ruby_targets_ruby19 )
+RDEPEND=ruby_targets_ruby18? ( dev-lang/ruby:1.8 ) ruby_targets_ree18? ( dev-lang/ruby-enterprise:1.8 ) ruby_targets_ruby19? ( dev-lang/ruby:1.9 ) ruby_targets_jruby? ( dev-java/jruby ) ruby_targets_ruby18? ( virtual/rubygems[ruby_targets_ruby18] ) ruby_targets_ree18? ( virtual/rubygems[ruby_targets_ree18] ) ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) ruby_targets_jruby? ( virtual/rubygems[ruby_targets_jruby] )
+REQUIRED_USE=|| ( ruby_targets_ruby18 ruby_targets_ree18 ruby_targets_ruby19 ruby_targets_jruby )
 SLOT=0
 SRC_URI=mirror://rubygems/oauth-0.4.7.gem
 _eclasses_=eutils	4878e7f88afc0ba0866ac112190b0fd4	java-utils-2	8d0d93b7a8605ea346cce4604f6db516	multilib	892e597faee02a5b94eb02ab512e7622	ruby-fakegem	4021487250c740e3dc16b181228db818	ruby-ng	69c01a1b984ed066bc91b4397b002f6a	toolchain-funcs	51e6c948e72c43bcc8edc7544411c953	user	d0a4d0735a6c0183d707ca919bd72f28	versionator	a8a3963967d6140be9a14b08bb8f047f
-_md5_=77f7473934c56983bacd4860c7d352a9
+_md5_=c0fd6786d4842adcd9fa444dea80d0a3
