@@ -1,6 +1,9 @@
 # ChangeLog for dev-lang/ruby
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/ruby/ChangeLog,v 1.618 2013/11/30 14:07:35 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/ruby/ChangeLog,v 1.619 2013/11/30 15:50:52 jer Exp $
+
+  30 Nov 2013; Jeroen Roovers <jer@gentoo.org> ruby-2.0.0_p353.ebuild:
+  Stable for HPPA (bug #492282).
 
   30 Nov 2013; Jeroen Roovers <jer@gentoo.org> ruby-1.9.3_p484.ebuild:
   Stable for HPPA (bug #492282).
